--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,42 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
+	<ion-navbar>
+		<ion-title>
+			Job Orders
+		</ion-title>
+	</ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+	<button
+		ion-button
+		block
+		color="primary"
+		(click)="addDocument()">
+		Yeni Kayıt Ekle
+	</button>
+	
+	<ion-list>
+		<ion-item *ngFor="let location of locations">
+			<h2>{{ location.city }}</h2>
+			<p>
+				Population: {{ location.population }}<br>
+				Established: {{ location.established }}
+			</p>
+
+			<button
+				ion-button
+				color="secondary"
+				(click)="updateDocument(location)">
+				Güncelle
+			</button>
+
+			<button
+				ion-button
+				color="danger"
+				(click)="deleteDocument(location)">
+				Sil
+			</button>
+		</ion-item>
+	</ion-list>
 </ion-content>
